initializing project responsiveness and creating a second carousel

--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,14 @@
    right: 35px !important;
    z-index: 49;
  }
+
+ /* @media screen and (min-width: 960px) {
+
+   .slick-prev {
+     display: none !important;
+   }
+
+   .slick-next {
+     display: none !important;
+   }
+ } */
