--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,17 @@
 }
 
 .cart {
-    cursor: pointer;
     font-size: 24px;
+    display: flex;
+    gap: 45px;
+}
+
+.cart svg {
+    cursor: pointer;
+}
+
+.list-item-desktop {
+    display: none;
 }
 
 .profile svg {
@@ -79,6 +88,8 @@
     padding: 15px 0;
 
 }
+
+
 
 .shopp img {
     width: 100%
@@ -244,4 +255,74 @@ span {
 .remove-product-button {
     background-color: hsl(223, 64%, 98%);
     border: none;
+}
+
+
+@media screen and (min-width: 960px) {
+
+    .menu-icon {
+        display: none;
+    }
+
+    .logo {
+        padding: 30px 0;
+        display: flex;
+        justify-content: space-between;
+        width: 490px;
+    }
+
+    .navbar {
+        width: 1280px;
+        border-bottom: 1px solid hsl(220, 14%, 90%);
+        color: hsl(0, 0%, 0%);
+    }
+
+    .container ul {
+        display: flex;
+        gap: 10px;
+        cursor: pointer;
+    }
+
+    .list-item-desktop {
+        color: hsl(219, 9%, 45%);
+        font-weight: 400;
+        font-size: 16px;
+        display: block;
+    }
+
+    .list-item-desktop:hover {
+        color: hsl(26, 100%, 55%);
+    }
+
+    .cart {
+        display: flex;
+        gap: 45px;
+    }
+
+    .container-shopp {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 80px;
+    }
+
+    .shopp-items {
+        width: 1280px;
+        display: flex;
+    }
+
+    .shopp {
+        width: 450px;
+        height: 450px;
+        padding: 0;
+    }
+
+    .container-thumbnails {
+        display: block;
+    }
+
+    .shopp img {
+        border-radius: 10px;
+    }
+
 }
