--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,6 @@
 
 }
 
-
-
 .shopp img {
     width: 100%
 }
@@ -327,7 +325,7 @@ span {
 
     .thumbnails {
         width: 100%;
-        max-width: 470px;
+        width: 470px;
         grid-gap: 20px;
         margin-top: 2rem;
         /* padding: 0 0.7rem; */
@@ -337,5 +335,29 @@ span {
         width: 90px;
         border-radius: 7px;
         cursor: pointer;
+    }
+
+    .cart-open {
+        width: 375px;
+        position: fixed;
+        top: 95px;
+        left: 1250px;
+    }
+
+    .buttons-carts {
+        display: flex;
+    }
+
+    .buttons {
+        width: 150px;
+    }
+
+    .button-cart {
+        width: 245px;
+    }
+
+    .buttons button svg {
+        font-size: 12px;
+        padding: 0 15px;
     }
 }
